objects/Rackspace_Credentials__c.object
<CustomObject>
    <fields>
        <fullName>Account_key__c</fullName>
        <description>This field is used to store the private key for rackspace account.
This private key is used for generating HMAC when downloading file from rackspace</description>
        <label>Account key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Key__c</fullName>
        <description>This field stores the auth key.</description>
        <inlineHelpText>Enter auth key</inlineHelpText>
        <label>Auth Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Url__c</fullName>
        <description>This field is used to store auth url</description>
        <label>Auth Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_URL__c</fullName>
        <description>The URL of External Facing Site</description>
        <label>External URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>This field is used to store the username of rackspace cloud.</description>
        <inlineHelpText>Enter the username for rackspace cloud</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>